<resources>
    <string name="app_name">PetInfo</string>
    <string name="appname"> PetInfo</string>
    <string name="facebook_app_id">213630569052926</string>
    <string name="Rs">\u20B9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="googleplayservice">This app won\'t run unless you update google play service</string>
    <string name="please_wait">Please wait...</string>
    <string name="mobile_val">Please enter mobile no..</string>
    <string name="mobile_val1">Please enter correct mobile no.</string>
    <string name="ok">Ok</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="foodTitle">Blue WILDERNESS</string>
    <string name="foodDesc">Adult Grain Free Chicken Dry Dog Food 24-lbs</string>
    <string name="foodDesc2">Blue Buffalo Wilderness Salmon Recipe Grain-Free Dry Dog Food, 24-lbs bag</string>
    <string name="cancel">Cancel</string>
    <string name="email_validation">Please enter valid email.</string>
    <string name="mobile_validation">Please enter valid mobile number.</string>
    <string name="password_validation">Please enter valid password.</string>
    <string name="name_required">Please fill the field.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="list">List</string>
    <string name="position">Position</string>
    <string name="weather_rain_warning_msg">It\'s going to rain, \nplease keep your pet indoor,\n if possible</string>
    <string name="lorem_ipsun_large">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\n Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="mother_s_breed">MOTHER\'S BREED</string>
    <string name="father_s_breed">FATHER\'S BREED</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dog_detail_image">DogDetailImage</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="permission_denied">Permission was denied. Please consider granting it in order to use all features.</string>
    <string name="permission_denied_never_ask_again">Permission was denied with never ask again.</string>
    <string name="text_pet_info">Single and handsome. Brave man with soul-melting eyes. Vivamus vehicula volutpat sapien, ut mollis est eleifend sit amet. Sed cursus pellentesque justo, nec pharetra tortor facilisis ut.Cras vel diam risus ... </string>
    <string name="become_foster_text_first">Thank you for showing interest \n in becoming a foster.</string>
    <string name="become_foster_text_second">Your information has been received and we will get back to you shortly.</string>
    <string name="password_val">Please enter password.</string>
    <string name="password_val1">Password must be minimum 6 digit maximum only 13 digit.</string>
    <string name="password_val2">Password dose not match.</string>
    <string name="password_required_validation">Please Enter Current Password.</string>
    <string name="new_pwd_required_validation">Please Enter New Password.</string>
    <string name="confirm_pwd_required_validation">Please Re-Enter New Password.</string>
    <string name="confirm_pwd_validation">New Password and Confirm Password doesn\'t match.</string>
    <string name="title_text">Google Sign-In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">disconnected</string>
    <string name="refresh_token">Get fresh token</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="tweeter_api_key">eFFoAxHNfai1FNOm2P8sGi0Yp</string>
    <string name="tweeter_secret_key">FvtC2KYYmS2vASPk8KBDOZXXaPf8CLh6EiXmTNh6jXU4cUO0gc</string>
    <string name="title_activity_image_detail">Preview</string>
    <string name="todo">TODO</string>
    <string name="breeds">Breeds</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="swipe_item_for_more_info">Swipe item for more info.</string>
</resources>