<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/action_bar_menus"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/gradiant_bg2"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.samyotech.petstand.utils.CustomTextView
                android:id="@+id/tv_add_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/breeds"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/ivSearchBreeds"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/search_new" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llSearchBreeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradiant_bg2"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etSearchBreeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="20sp"
                app:met_textColor="@color/white"
                android:hint="Search"
                android:maxLength="15"
                android:singleLine="true"
                android:paddingLeft="5dp"
                app:met_textColorHint="@color/white"
                android:alpha="0.80"/>

            <com.samyotech.petstand.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:alpha="0.90"
                android:text="@string/what_are_you_looking_for"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:groupIndicator="@null" />

        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.samyotech.petstand.utils.CustomTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/swipe_item_for_more_info"
                android:textColor="@color/material_grey_600"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>


